# DocRetrievalAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_app.py  app.py  pyproject.toml  requirements.txt  start_apps.sh
deployment/: deploy.py  run.py
rag/: __init__.py  agent.py  prompts.py
rag/shared_libraries/: prepare_corpus_and_data.py
tests/: test_agent.py
